--- a/src/core/index.html
+++ b/src/core/index.html
@@ -151,6 +151,7 @@
 				</div>
 			</div>
 			<div id="buddyWrapper" dir="ltr">
+                <input id="buddyFilter" type="text" placeholder="Buddy filter">
 				<div id="buddyList">
 					<div class="buddy" id="buddy-groupChat" data-id="groupChat">
 						<span></span>
